# microscope-metrics

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  tox.ini
.dvc/: config
.github/workflows/: run_tests_pr.yml  run_tests_push.yml
docs/examples/: new_sample.py
docs/notebooks/: microscope-metrics_tutorial.ipynb
docs/schema/: Boolean.md  ChannelSeries.md  Color.md  Column.md  Comment.md  Curie.md  Date.md  DateOrDatetime.md  Datetime.md  Decimal.md  Double.md  Ellipse.md  Experimenter.md  Float.md  Image.md  Image2D.md  Image5D.md  ImageAsNumpy.md  ImageInline.md  ImageMask.md  Integer.md  KeyValues.md  Line.md  Mask.md  MetaObject.md  MetricsDataset.md  MetricsInput.md  MetricsObject.md  MetricsOutput.md  NamedObject.md  Ncname.md  Nodeidentifier.md  Objectidentifier.md  PixelSeries.md  Point.md  Polygon.md  Protocol.md  ROI.md  Rectangle.md  Sample.md  (+63 more)
docs/schema/samples/: ArgolightBDataset.md  ArgolightBDistanceKeyValues.md  ArgolightBInput.md  ArgolightBIntensityKeyValues.md  ArgolightBOutput.md  ArgolightEDataset.md  ArgolightEInput.md  ArgolightEKeyValues.md  ArgolightEOutput.md  Boolean.md  ChannelSeries.md  Color.md  Column.md  Comment.md  Curie.md  Date.md  DateOrDatetime.md  Datetime.md  Decimal.md  Double.md  Ellipse.md  Experimenter.md  FieldIlluminationDataset.md  FieldIlluminationInput.md  FieldIlluminationKeyValues.md  FieldIlluminationOutput.md  Float.md  Image.md  Image2D.md  Image5D.md  ImageAsNumpy.md  ImageInline.md  ImageMask.md  Integer.md  KeyValues.md  Line.md  Mask.md  MetaObject.md  MetricsDataset.md  MetricsInput.md  (+170 more)
microscopemetrics/docs/examples/: new_sample.py
microscopemetrics/model/: model.py
microscopemetrics/samples/: __init__.py  argolight.py  psf_beads.py
notebooks/: microscope-metrics_tutorial.ipynb  micrsocope-metrics_tutorial.ipynb
src/microscopemetrics/: __init__.py  _version.py
src/microscopemetrics/analyses/: __init__.py  argolight.py  dataset.py  field_illumination.py  light_source_power.py  mappings.py  psf_beads.py  research_experiment.py  tools.py  user_experiment.py
src/microscopemetrics/analysis/: __init__.py  tools.py
src/microscopemetrics/data_schema/: core_schema.py  core_schema.yaml
src/microscopemetrics/data_schema/samples/: argolight_schema.py  argolight_schema.yaml  field_illum_schema.py  field_illum_schema.yaml  field_illumination_schema.py  field_illumination_schema.yaml  psf_beads_schema.py
src/microscopemetrics/devices/: devices.py
src/microscopemetrics/model/: model.py  model.yaml  model_pydantic.py  model_python.py
src/microscopemetrics/plots/: __init__.py  argolight.py  field_illum.py
src/microscopemetrics/samples/: __init__.py  argolight.py  dataset.py  field_illum.py  field_illumination.py  psf_beads.py
src/microscopemetrics/strategies/: field_illumination.py  light_source_power.py  psf_beads.py  strategies.py  user_experiment.py
src/microscopemetrics/utilities/: plot.py  utilities.py
tests/: .gitignore  conftest.py  constants.py  helper_functions.py  strategies.py  test_utilities.py
tests/data/: .gitignore  field_illumination_datasets.dvc  light_source_power_datasets.dvc  psf_beads_datasets.dvc
tests/data/field_illumination_datasets/temp/: chroma.npy  dataset_input.yaml  dataset_input_parameters.yaml  dataset_key_measurements.yaml  output.yaml
tests/unit/: test_analysis_tools.py  test_util_functions.py
tests/unit/analyses/: test_argolight.py  test_field_illumination.py  test_psf_beads.py
tests/unit/analyses/real_data/: conftest.py  fixtures.py  test_field_illumination.py  test_light_source_power.py  test_psf_beads.py
tests/unit/analyses/syntheric_data/: test_field_illumination.py  test_light_source_power.py  test_psf_beads.py  test_user_experiment.py
tests/unit/analyses/synthetic_data/: test_field_illumination.py  test_psf_beads.py
tests/unit/model/: test_model.py
tests/unit/samples/: test_argolight.py  test_field_illum.py  test_field_illumination.py  test_psf_beads.py  test_samples.py
tests/unit/schema/: test_core_schema.py
