[tool.poetry]
name = "microscopemetrics"
version = "0.2.2"
description = "A package providing analysis routines to measure the performance of micrsocopes used in biomedical research"
authors = [
    "Julio Mateos Langerak <julio.matoes-langerak@igh.cnrs.fr>",
    "Sotirios Papadiamantis <sotirios.papadiamantis@univ-amu.fr>"
]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/MontpellierRessourcesImagerie/microscope-metrics"
repository = "https://github.com/MontpellierRessourcesImagerie/microscope-metrics"
documentation = "https://github.com/MontpellierRessourcesImagerie/microscope-metrics/tree/master/docs"
keywords = ["microscopy", "metrology"]

[tool.pytest.ini_options]
addopts = "--hypothesis-show-statistics --hypothesis-profile=dev --workers=auto"
testpaths = [
    "tests"
]
markers = [
    "instantiation: marks tests that instantiate a MetricsDataset",
    "run: marks tests that run a metric",
    "analysis: marks tests that test correctness of analysis",
    "errors: marks tests that should throw errors"
]
filterwarnings = [
    "ignore:.*Support for class-based `config` is deprecated.*:DeprecationWarning",
    "ignore:.*Pydantic V1 style `@validator` validators are deprecated.*:DeprecationWarning",
    "ignore:.*urllib3 v2 only supports OpenSSL.*:Warning",
]

[tool.poetry.dependencies]
python = ">=3.10.12 <3.12"
numpy = "^1"
scikit-image = "^0"
scipy = "^1"
pandas = "^1"
matplotlib = "^3"
microscopemetrics-schema = {git = "https://github.com/juliomateoslangerak/microscopemetrics-schema.git"}

[tool.poetry.group.test.dependencies]
pytest = "^7"
hypothesis = "^6"
tox = "^3"
coverage = "^7"
pytest-parallel = "^0.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23"
poetry = "^1"
jupyter = "^1"
isort = "^5"
pre-commit = "^3"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
