[tool.poetry]
name = "microscopemetrics"
version = "0.2.2"
description = "A package providing analysis routines to measure the performance of micrsocopes used in biomedical research"
authors = [
    "Julio Mateos Langerak <julio.matoes-langerak@igh.cnrs.fr>",
    "Sotirios Papadiamantis <sotirios.papadiamantis@univ-amu.fr>"
]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/MontpellierRessourcesImagerie/microscope-metrics"
repository = "https://github.com/MontpellierRessourcesImagerie/microscope-metrics"
documentation = "https://github.com/MontpellierRessourcesImagerie/microscope-metrics/tree/master/docs"
keywords = ["microscopy", "metrology"]

[tool.pytest.ini_options]
addopts = "--hypothesis-show-statistics --hypothesis-profile=dev --workers=auto"
testpaths = [
    "tests"
]
markers = [
    "instantiation: marks tests that instantiate a MetricsDataset",
    "run: marks tests that run a metric",
    "analysis: marks tests that test correctness of analysis",
    "errors: marks tests that should throw errors"
]
filterwarnings = [
    "ignore:.*Support for class-based `config` is deprecated.*:DeprecationWarning",
    "ignore:.*Pydantic V1 style `@validator` validators are deprecated.*:DeprecationWarning",
    "ignore:.*urllib3 v2 only supports OpenSSL.*:Warning",
]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = ">=3.9.18 <3.12"
numpy = "^2"
scikit-image = "^0"
scipy = "^1"
pandas = "^2"
microscopemetrics-schema = {git = "https://github.com/MontpellierRessourcesImagerie/microscopemetrics-schema.git", branch="dev"}

[tool.poetry.group.test.dependencies]
pytest = "^8"
hypothesis = "^6"
tox = "^3"
coverage = "^7"
pytest-parallel = "^0.1.1"
dvc = "^3"

[tool.poetry.group.dev.dependencies]
black = "^24"
poetry = "^2"
isort = "^5"
pre-commit = "^4"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
