[build-system]
requires = ["poetry-core>=2.4.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "microscopemetrics"
description = "A package providing analysis routines to measure the performance of microscopes used in biomedical research"
authors = [
    {name = "Julio Mateos Langerak", email = "julio.mateos-langerak@igh,cnrs.fr"},
    {name = "Sotirios Papadiamantis", email = "sotirios.papadiamantis@univ-amu.fr"}
]
maintainers = [
    {name = "Julio Mateos Langerak", email = "julio.mateos-langerak@igh,cnrs.fr"}
]
keywords = ["microscopy", "metrology"]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.10.0,<3.13"
include = [
    "README.md",
    "src/microscopemetrics",
    "project"
]
dynamic = [
    "version",
    "classifiers",
    "dependencies",
]

[project.urls]
homepage = "https://github.com/MontpellierRessourcesImagerie/microscope-metrics"
repository = "https://github.com/MontpellierRessourcesImagerie/microscope-metrics"
documentation = "https://github.com/MontpellierRessourcesImagerie/microscope-metrics/tree/master/docs"

[tool.poetry]
requires-poetry = ">=2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Image Processing"
]
version = "0.0.0"

[tool.poetry.dependencies]
numpy = ">=2.2.6,<3"
scikit-image = ">=0.1,<1"
scipy = ">=1.0,<2"
pandas = ">=2.0,<3"
microscopemetrics-schema = "==0.0.5"
#microscopemetrics-schema = { git = "https://github.com/juliomateoslangerak/microscopemetrics-schema.git", branch = "dev" }

[tool.poetry.group.test.dependencies]
pytest = ">=9.0.3,<10"
hypothesis = ">=6.152.7,<7"
tox = ">=4.54.0,<5"
coverage = ">=7.14,<8"
pytest-xdist = ">=3.0,<4"
dvc = ">=3.0,<4"
dvc-gdrive = ">=3.0,<4"
pyOpenSSL = ">=26.2.0,<27"

[tool.poetry.group.dev.dependencies]
black = ">=26.0,<27"
poetry = ">=2.0,<3"
isort = ">=8.0.1,<9"
pre-commit = ">=4.0,<5"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = ">=1.5.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
strict = true

[tool.pytest.ini_options]
addopts = "--hypothesis-show-statistics --hypothesis-profile=pre_release -n auto"
testpaths = [
    "tests"
]
markers = [
    "instantiation: marks tests that instantiate a MetricsDataset",
    "run: marks tests that run a metric",
    "analysis: marks tests that test correctness of analysis",
    "errors: marks tests that should throw errors"
]
filterwarnings = [
    "ignore:.*Support for class-based `config` is deprecated.*:DeprecationWarning",
    "ignore:.*Pydantic V1 style `@validator` validators are deprecated.*:DeprecationWarning",
    "ignore:.*urllib3 v2 only supports OpenSSL.*:Warning",
]

[tool.isort]
profile = "black"


